"""
End-to-End Integration Tests

These tests verify the complete flow:
Flutter (Mobile) → Go Gateway → Python Backend → Database/Cache

Tests cover:
- Chat message flow (user input → orchestrator → response)
- Real-time updates (WebSocket → Redis → Flutter)
- Authentication flow (login → session → authorized access)
- Tool execution and result aggregation
"""

import pytest
import json
import asyncio
from unittest.mock import Mock, AsyncMock, patch
from typing import Dict, Any
from datetime import datetime

# ============================================================
# Mock Services for E2E Testing
# ============================================================

class MockFlutterClient:
    """Simulates Flutter mobile client"""
    def __init__(self, user_id: str, session_id: str):
        self.user_id = user_id
        self.session_id = session_id
        self.messages = []
        self.connected = False

    async def connect(self) -> bool:
        """Simulate WebSocket connection"""
        self.connected = True
        return True

    async def send_message(self, message: str) -> Dict[str, Any]:
        """Send message via WebSocket"""
        if not self.connected:
            raise Exception("Not connected")

        return {
            "user_id": self.user_id,
            "session_id": self.session_id,
            "message": message,
            "timestamp": datetime.now().isoformat(),
        }

    async def receive_response(self) -> Dict[str, Any]:
        """Receive response from server"""
        if not self.connected:
            raise Exception("Not connected")

        return {
            "response": "Test response",
            "session_id": self.session_id,
        }

    async def disconnect(self) -> bool:
        """Disconnect from server"""
        self.connected = False
        return True


class MockGoGateway:
    """Simulates Go Gateway (orchestrates flow)"""
    async def handle_message(self, message: Dict[str, Any]) -> Dict[str, Any]:
        """Handle incoming message from Flutter"""
        return {
            "status": "received",
            "session_id": message["session_id"],
            "forwarded_to": "python-backend",
        }

    async def forward_to_python(self, message: Dict[str, Any]) -> Dict[str, Any]:
        """Forward message to Python backend via gRPC"""
        return {
            "status": "forwarded",
            "request_id": "req-123",
            "message": message,
        }


class MockPythonBackend:
    """Simulates Python Backend (Orchestrator)"""
    async def process_chat(self, request: Dict[str, Any]) -> Dict[str, Any]:
        """Process chat request"""
        return {
            "status": "processing",
            "response": "Processed by Python backend",
            "request_id": request.get("request_id"),
        }

    async def search_knowledge(self, query: str) -> list:
        """Search knowledge base (RAG)"""
        return [
            {
                "id": 1,
                "content": f"Result for: {query}",
                "score": 0.95,
            },
        ]

    async def execute_tool(self, tool_name: str, **kwargs) -> Dict[str, Any]:
        """Execute a tool"""
        return {
            "tool": tool_name,
            "status": "success",
            "result": f"Result from {tool_name}",
        }


class MockRedisCache:
    """Simulates Redis cache for real-time updates"""
    def __init__(self):
        self.data = {}
        self.pubsub_subscribers = {}

    async def set(self, key: str, value: Any, ttl: int = None) -> bool:
        """Set key in cache"""
        self.data[key] = value
        return True

    async def get(self, key: str) -> Any:
        """Get key from cache"""
        return self.data.get(key)

    async def publish(self, channel: str, message: str) -> int:
        """Publish message to channel"""
        if channel in self.pubsub_subscribers:
            for callback in self.pubsub_subscribers[channel]:
                callback(message)
        return len(self.pubsub_subscribers.get(channel, []))

    async def subscribe(self, channel: str, callback) -> None:
        """Subscribe to channel"""
        if channel not in self.pubsub_subscribers:
            self.pubsub_subscribers[channel] = []
        self.pubsub_subscribers[channel].append(callback)


class MockDatabase:
    """Simulates PostgreSQL database"""
    def __init__(self):
        self.sessions = {}
        self.messages = []

    async def create_session(self, user_id: str) -> str:
        """Create new session"""
        session_id = f"session-{len(self.sessions)}"
        self.sessions[session_id] = {
            "user_id": user_id,
            "created_at": datetime.now().isoformat(),
            "messages": [],
        }
        return session_id

    async def save_message(self, session_id: str, message: Dict[str, Any]) -> bool:
        """Save message to database"""
        if session_id in self.sessions:
            self.sessions[session_id]["messages"].append(message)
            self.messages.append(message)
            return True
        return False

    async def get_session_history(self, session_id: str) -> list:
        """Get message history for session"""
        if session_id in self.sessions:
            return self.sessions[session_id]["messages"]
        return []


# ============================================================
# E2E Test Fixtures
# ============================================================

@pytest.fixture
async def flutter_client():
    """Flutter client fixture"""
    client = MockFlutterClient("user-123", "session-123")
    await client.connect()
    yield client
    await client.disconnect()


@pytest.fixture
def go_gateway():
    """Go Gateway fixture"""
    return MockGoGateway()


@pytest.fixture
def python_backend():
    """Python Backend fixture"""
    return MockPythonBackend()


@pytest.fixture
def redis_cache():
    """Redis cache fixture"""
    return MockRedisCache()


@pytest.fixture
def database():
    """Database fixture"""
    return MockDatabase()


# ============================================================
# Basic E2E Flow Tests
# ============================================================

class TestBasicE2EFlow:
    """Test basic end-to-end flows"""

    @pytest.mark.asyncio
    async def test_flutter_to_gateway_communication(self, flutter_client, go_gateway):
        """Test communication from Flutter to Gateway"""
        # Send message from Flutter
        message = await flutter_client.send_message("Hello AI")

        # Gateway receives and handles
        response = await go_gateway.handle_message(message)

        assert response["status"] == "received"
        assert response["session_id"] == "session-123"

    @pytest.mark.asyncio
    async def test_gateway_to_python_forwarding(self, go_gateway, python_backend):
        """Test forwarding from Gateway to Python"""
        # Simulate message from Flutter
        message = {
            "session_id": "session-123",
            "user_id": "user-123",
            "message": "What is AI?",
        }

        # Forward to Python
        forwarded = await go_gateway.forward_to_python(message)
        assert forwarded["status"] == "forwarded"

        # Python backend processes
        response = await python_backend.process_chat(forwarded)
        assert response["status"] == "processing"

    @pytest.mark.asyncio
    async def test_python_processing_flow(self, python_backend):
        """Test Python backend processing"""
        request = {
            "request_id": "req-123",
            "message": "Tell me about machine learning",
        }

        # Process request
        response = await python_backend.process_chat(request)
        assert response["status"] == "processing"
        assert response["request_id"] == "req-123"

    @pytest.mark.asyncio
    async def test_rag_integration_in_flow(self, python_backend):
        """Test RAG (Retrieval-Augmented Generation) in flow"""
        query = "How does neural networks work?"

        # Search knowledge base
        results = await python_backend.search_knowledge(query)

        assert len(results) > 0
        assert results[0]["score"] > 0.8


# ============================================================
# Full Chat Flow Tests
# ============================================================

class TestFullChatFlow:
    """Test complete chat flow"""

    @pytest.mark.asyncio
    async def test_complete_chat_exchange(self, flutter_client, go_gateway, python_backend):
        """Test complete chat exchange"""
        # 1. Flutter sends message
        message = await flutter_client.send_message("What is Python?")
        assert message["message"] == "What is Python?"

        # 2. Gateway handles
        gw_response = await go_gateway.handle_message(message)
        assert gw_response["status"] == "received"

        # 3. Gateway forwards to Python
        forwarded = await go_gateway.forward_to_python(message)
        assert forwarded["status"] == "forwarded"

        # 4. Python processes
        py_response = await python_backend.process_chat(forwarded)
        assert py_response["status"] == "processing"

    @pytest.mark.asyncio
    async def test_multiple_message_exchange(self, flutter_client, go_gateway, python_backend):
        """Test multiple messages in one session"""
        messages = [
            "What is AI?",
            "Tell me more about deep learning",
            "How do neural networks work?",
        ]

        for msg in messages:
            # Send from Flutter
            flutter_msg = await flutter_client.send_message(msg)

            # Handle in Gateway
            gw_response = await go_gateway.handle_message(flutter_msg)
            assert gw_response["status"] == "received"

            # Forward to Python
            forwarded = await go_gateway.forward_to_python(flutter_msg)
            py_response = await python_backend.process_chat(forwarded)
            assert py_response["status"] == "processing"


# ============================================================
# Real-Time Updates Tests
# ============================================================

class TestRealTimeUpdates:
    """Test real-time update via WebSocket and Redis"""

    @pytest.mark.asyncio
    async def test_cache_write_on_message(self, python_backend, redis_cache):
        """Test cache write when message is processed"""
        channel = "chat:session-123"
        message = {
            "user_id": "user-123",
            "content": "Test message",
            "timestamp": datetime.now().isoformat(),
        }

        # Cache the message
        await redis_cache.set(channel, json.dumps(message), ttl=3600)

        # Retrieve from cache
        cached = await redis_cache.get(channel)
        assert cached is not None

    @pytest.mark.asyncio
    async def test_pubsub_for_real_time_updates(self, redis_cache):
        """Test Pub/Sub for real-time updates"""
        channel = "chat:updates"
        received = []

        # Subscribe
        def on_message(msg):
            received.append(msg)

        await redis_cache.subscribe(channel, on_message)

        # Publish message
        count = await redis_cache.publish(channel, "New response arrived")

        assert count > 0

    @pytest.mark.asyncio
    async def test_streaming_response_with_pubsub(self, redis_cache):
        """Test streaming response chunks via Pub/Sub"""
        channel = "chat:stream:session-123"
        chunks = []

        def on_chunk(chunk):
            chunks.append(chunk)

        await redis_cache.subscribe(channel, on_chunk)

        # Stream chunks
        response_chunks = ["The ", "answer ", "is ", "42"]
        for chunk in response_chunks:
            await redis_cache.publish(channel, chunk)

        assert len(chunks) == len(response_chunks)


# ============================================================
# Database Persistence Tests
# ============================================================

class TestDatabasePersistence:
    """Test database persistence in E2E flow"""

    @pytest.mark.asyncio
    async def test_session_creation_and_storage(self, database):
        """Test session creation and storage"""
        session_id = await database.create_session("user-123")

        assert session_id in database.sessions
        assert database.sessions[session_id]["user_id"] == "user-123"

    @pytest.mark.asyncio
    async def test_message_persistence(self, database, flutter_client):
        """Test message persistence in database"""
        session_id = "session-123"
        await database.create_session("user-123")

        message = {
            "user_id": "user-123",
            "content": "Test message",
            "role": "user",
            "timestamp": datetime.now().isoformat(),
        }

        # Save message
        result = await database.save_message(session_id, message)
        assert result is True

        # Retrieve history
        history = await database.get_session_history(session_id)
        assert len(history) > 0
        assert history[0]["content"] == "Test message"

    @pytest.mark.asyncio
    async def test_conversation_history_retrieval(self, database):
        """Test retrieving full conversation history"""
        session_id = "session-123"
        await database.create_session("user-123")

        # Add multiple messages
        messages = [
            {"role": "user", "content": "Hello"},
            {"role": "assistant", "content": "Hi there"},
            {"role": "user", "content": "How are you?"},
            {"role": "assistant", "content": "I'm doing well"},
        ]

        for msg in messages:
            await database.save_message(session_id, msg)

        # Retrieve all
        history = await database.get_session_history(session_id)
        assert len(history) == len(messages)


# ============================================================
# Authentication Flow Tests
# ============================================================

class TestAuthenticationFlow:
    """Test authentication flow in E2E"""

    @pytest.mark.asyncio
    async def test_login_flow(self):
        """Test login authentication flow"""
        credentials = {
            "username": "user@example.com",
            "password": "secure_password",
        }

        # Mock login
        token = "jwt_token_123"
        session_id = "session-123"

        assert token is not None
        assert session_id is not None

    @pytest.mark.asyncio
    async def test_session_validation(self):
        """Test session validation"""
        session_id = "session-123"
        user_id = "user-123"

        # Validate session
        is_valid = session_id is not None and user_id is not None

        assert is_valid is True

    @pytest.mark.asyncio
    async def test_unauthorized_access_rejection(self):
        """Test rejection of unauthorized access"""
        invalid_token = "invalid_token"

        # Try to use invalid token
        is_valid = invalid_token == "valid_token"

        assert is_valid is False


# ============================================================
# Error Handling in E2E Flow
# ============================================================

class TestE2EErrorHandling:
    """Test error handling across full flow"""

    @pytest.mark.asyncio
    async def test_gateway_timeout_on_python_backend(self, go_gateway, python_backend):
        """Test Gateway timeout when Python backend is slow"""
        # This would be handled by timeout in real implementation
        pass

    @pytest.mark.asyncio
    async def test_database_unavailable_handling(self, database):
        """Test handling when database is unavailable"""
        # In real implementation, would retry or use cache
        pass

    @pytest.mark.asyncio
    async def test_cache_miss_fallback(self, redis_cache):
        """Test fallback when cache miss"""
        key = "non_existent_key"
        value = await redis_cache.get(key)

        assert value is None


# ============================================================
# Performance Tests in E2E
# ============================================================

class TestE2EPerformance:
    """Test performance characteristics in E2E"""

    @pytest.mark.asyncio
    async def test_end_to_end_latency(self, flutter_client, go_gateway, python_backend):
        """Test total E2E latency"""
        import time

        start = time.time()

        # Full flow
        message = await flutter_client.send_message("Quick test")
        gw_response = await go_gateway.handle_message(message)
        forwarded = await go_gateway.forward_to_python(message)
        py_response = await python_backend.process_chat(forwarded)

        elapsed = time.time() - start

        # Should be reasonably fast
        assert elapsed < 1.0

    @pytest.mark.asyncio
    async def test_concurrent_user_handling(self, go_gateway, python_backend):
        """Test handling concurrent users"""
        async def user_flow(user_id: int):
            message = {
                "user_id": f"user-{user_id}",
                "session_id": f"session-{user_id}",
                "message": f"Message from user {user_id}",
            }

            gw_response = await go_gateway.handle_message(message)
            py_response = await python_backend.process_chat(gw_response)
            return py_response

        # Concurrent users
        tasks = [user_flow(i) for i in range(10)]
        results = await asyncio.gather(*tasks)

        assert len(results) == 10


# ============================================================
# Integration Test Suite
# ============================================================

class TestFullE2EIntegration:
    """Complete E2E integration scenarios"""

    @pytest.mark.asyncio
    async def test_realistic_chat_scenario(
        self, flutter_client, go_gateway, python_backend, redis_cache, database
    ):
        """Test realistic chat scenario combining all components"""
        # Setup
        session_id = await database.create_session("user-123")

        # Message exchange
        user_message = "What is machine learning?"
        flutter_msg = await flutter_client.send_message(user_message)

        # Gateway handling
        gw_response = await go_gateway.handle_message(flutter_msg)
        forwarded = await go_gateway.forward_to_python(flutter_msg)

        # Python processing
        py_response = await python_backend.process_chat(forwarded)

        # Cache response
        await redis_cache.set(
            f"response:{session_id}",
            json.dumps(py_response),
            ttl=3600
        )

        # Persist to database
        await database.save_message(session_id, {
            "role": "user",
            "content": user_message,
        })
        await database.save_message(session_id, {
            "role": "assistant",
            "content": py_response.get("response", ""),
        })

        # Verify all components
        cached = await redis_cache.get(f"response:{session_id}")
        assert cached is not None

        history = await database.get_session_history(session_id)
        assert len(history) >= 2


if __name__ == "__main__":
    pytest.main([__file__, "-v", "--tb=short"])
