"""
WebSocket æµ‹è¯•å®¢æˆ·ç«¯
æµ‹è¯• Go Gateway â†’ Python gRPC â†’ LLM çš„å®Œæ•´é“¾è·¯
"""
import asyncio
import json
import os
import time
from jose import jwt as jose_jwt
from pathlib import Path
import websockets
from loguru import logger


def _load_jwt_secret() -> str:
    env_secret = os.getenv("JWT_SECRET")
    if env_secret:
        return env_secret
    for path in (Path(__file__).resolve().parents[1] / ".env", Path(__file__).resolve().parent / "gateway" / ".env"):
        if path.exists():
            for line in path.read_text(encoding="utf-8").splitlines():
                if line.startswith("JWT_SECRET="):
                    return line.split("=", 1)[1].strip()
    return "dev-secret-key"


JWT_SECRET = _load_jwt_secret()


def _create_jwt(user_id: str) -> str:
    payload = {
        "sub": user_id,
        "exp": int(time.time()) + 3600,
    }
    return jose_jwt.encode(payload, JWT_SECRET, algorithm="HS256")

DEFAULT_USER_ID = "00000000-0000-0000-0000-000000000001"


async def test_websocket_chat():
    """
    æµ‹è¯• WebSocket æµå¼å¯¹è¯
    """
    user_id = DEFAULT_USER_ID
    token = _create_jwt(user_id)
    uri = f"ws://localhost:8080/ws/chat?user_id={user_id}&token={token}"

    headers = {"Authorization": f"Bearer {token}"}
    logger.info(f"ğŸ”Œ Connecting to WebSocket: {uri}")

    try:
        async with websockets.connect(uri, additional_headers=headers) as websocket:
            logger.success("âœ… WebSocket connected!")

            # å‘é€æµ‹è¯•æ¶ˆæ¯
            test_message = {
                "message": "å¸®æˆ‘åˆ¶å®šé«˜æ•°å¤ä¹ è®¡åˆ’",  # DEMO_MODE å…³é”®è¯
                "session_id": "test_session_001",
                "nickname": "æµ‹è¯•åŒå­¦"
            }

            logger.info(f"ğŸ“¤ Sending message: {test_message['message']}")
            await websocket.send(json.dumps(test_message))

            # æ¥æ”¶æµå¼å“åº”
            logger.info("\n" + "=" * 70)
            logger.info("ğŸ¤– AI Response Stream:")
            logger.info("=" * 70)

            response_count = 0
            full_text = ""

            while True:
                try:
                    response = await asyncio.wait_for(websocket.recv(), timeout=10.0)
                    response_count += 1

                    data = json.loads(response)
                    response_type = data.get("type")

                    if response_type == "delta":
                        # æµå¼æ–‡æœ¬
                        delta = data.get("delta", "")
                        print(delta, end="", flush=True)
                        full_text += delta

                    elif response_type == "status_update":
                        # çŠ¶æ€æ›´æ–°
                        status = data.get("status", {})
                        state = status.get("state", "UNKNOWN")
                        details = status.get("details", "")
                        logger.info(f"\nğŸ“ [{state}] {details}")

                    elif response_type == "full_text":
                        # å®Œæ•´æ–‡æœ¬
                        full_text = data.get("full_text", "")
                        logger.info(f"\nâœ… Received full_text: {len(full_text)} chars")

                    elif response_type == "error":
                        # é”™è¯¯
                        error = data.get("error", {})
                        logger.error(f"\nâŒ Error: {error}")
                        break

                    elif response_type == "usage":
                        # Token ä½¿ç”¨ç»Ÿè®¡
                        usage = data.get("usage", {})
                        logger.info(f"\nğŸ“Š Usage: {usage}")

                    # æ£€æŸ¥æ˜¯å¦ç»“æŸ
                    if data.get("finish_reason") and data.get("finish_reason") != "NULL":
                        logger.info(f"\nğŸ Finish reason: {data['finish_reason']}")
                        break

                except asyncio.TimeoutError:
                    logger.warning("\nâ±ï¸  Response timeout - stream may have ended")
                    break
                except websockets.exceptions.ConnectionClosed:
                    logger.warning("\nğŸ”Œ Connection closed by server")
                    break

            print("\n" + "=" * 70)
            logger.success("âœ… Test completed successfully!")
            logger.info(f"ğŸ“Š Statistics:")
            logger.info(f"   - Response chunks: {response_count}")
            logger.info(f"   - Total characters: {len(full_text)}")

            return True

    except Exception as e:
        logger.error(f"âŒ Test failed: {e}", exc_info=True)
        return False


async def test_multiple_messages():
    """
    æµ‹è¯•å¤šè½®å¯¹è¯
    """
    user_id = DEFAULT_USER_ID
    token = _create_jwt(user_id)
    uri = f"ws://localhost:8080/ws/chat?user_id={user_id}&token={token}"

    headers = {"Authorization": f"Bearer {token}"}
    logger.info(f"ğŸ”Œ Testing multiple messages...")

    async with websockets.connect(uri, additional_headers=headers) as websocket:
        messages = [
            "å¸®æˆ‘åˆ¶å®šé«˜æ•°å¤ä¹ è®¡åˆ’",
            "ä»€ä¹ˆæ˜¯å¾®ç§¯åˆ†ï¼Ÿ",
            "æ¨èä¸€æœ¬å¥½ä¹¦"
        ]

        for i, msg in enumerate(messages, 1):
            logger.info(f"\nğŸ“¤ Message {i}/{len(messages)}: {msg}")

            await websocket.send(json.dumps({
                "message": msg,
                "session_id": "multi_test_session",
                "nickname": "æµ‹è¯•åŒå­¦"
            }))

            # æ¥æ”¶è¿™æ¡æ¶ˆæ¯çš„æ‰€æœ‰å“åº”
            while True:
                try:
                    response = await asyncio.wait_for(websocket.recv(), timeout=5.0)
                    data = json.loads(response)

                    if data.get("type") == "delta":
                        print(data.get("delta", ""), end="", flush=True)

                    if data.get("finish_reason") and data.get("finish_reason") != "NULL":
                        print()  # æ¢è¡Œ
                        break

                except asyncio.TimeoutError:
                    break

        logger.success("\nâœ… Multiple messages test completed!")


async def main():
    """
    è¿è¡Œæ‰€æœ‰æµ‹è¯•
    """
    logger.info("ğŸ§ª Starting WebSocket Integration Tests\n")

    # æµ‹è¯•1: å•æ¡æ¶ˆæ¯
    logger.info("=" * 70)
    logger.info("Test 1: Single Message Stream")
    logger.info("=" * 70)
    success1 = await test_websocket_chat()

    await asyncio.sleep(1)

    # æµ‹è¯•2: å¤šè½®å¯¹è¯
    logger.info("\n" + "=" * 70)
    logger.info("Test 2: Multiple Messages")
    logger.info("=" * 70)
    try:
        await test_multiple_messages()
        success2 = True
    except Exception as e:
        logger.error(f"Multiple messages test failed: {e}")
        success2 = False

    # æ±‡æ€»ç»“æœ
    logger.info("\n" + "=" * 70)
    logger.info("ğŸ¯ Test Summary:")
    logger.info("=" * 70)
    logger.info(f"  Single Message: {'âœ… PASS' if success1 else 'âŒ FAIL'}")
    logger.info(f"  Multiple Messages: {'âœ… PASS' if success2 else 'âŒ FAIL'}")
    logger.info("=" * 70)

    return success1 and success2


if __name__ == '__main__':
    success = asyncio.run(main())
    exit(0 if success else 1)
